--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -45,7 +45,7 @@
                             <i class="far fa-shopping-cart"></i>
                         </a>
                         {% if user.is_authenticated %}
-                            <a href="#" class="game-icon"><i class="fa fa-user"></i></a>
+                            <a href="{% url 'profile' %}" class="game-icon"><i class="fa fa-user"></i></a>
                         {% else %}
                             <a href="{% url 'login' %}" class="game-icon"><i class="fa fa-sign-in"></i></a>
                         {% endif %}
