--- a/admin_module/templates/admin_module/edit_profile.html
+++ b/admin_module/templates/admin_module/edit_profile.html
@@ -88,20 +88,20 @@
                         <!-- general form elements -->
                         <div class="card card-primary">
                             <div class="card-header">
-                                <h3 class="card-title">مثال سریع</h3>
+                                <h3 class="card-title">ویرایش اطلاعات</h3>
                             </div>
                             <!-- /.card-header -->
                             <!-- form start -->
 {#                            TODO: make this form#}
-                            <form>
+                            <form method="post" novalidate> {% csrf_token %}
                                 <div class="card-body">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1">آدرس ایمیل</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                                        {{ edit_profile_form.first_name.label_tag }}
+                                        {{ edit_profile_form.first_name }}
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleInputPassword1">رمز ورود</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                        {{ edit_profile_form.last_name.label_tag }}
+                                        {{ edit_profile_form.last_name }}
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputFile">فایل</label>
